--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
         <div class="container">
         <div class="product">
             <p class="head">Notebook</p>
-            <a href="shop.html"><img src="Images/notebook.jpg" alt="notebook image"></a>
+            <a href="shop.html"><img src="notebook.jpg" alt="notebook image"></a>
             </div>
         </div>
         <div class="product">
             <p class="head">Bag</p>
-            <a href="shop.html"><img src="Images/bag.jpg" alt="bag image"></a>
+            <a href="shop.html"><img src="bag.jpg" alt="bag image"></a>
             </div>
         </div>
         <div class="product">
             <p class="head">Pen</p>
-            <a href="shop.html"><img src="Images/pen.jpg" alt="pen image"></a>
+            <a href="shop.html"><img src="pen.jpg" alt="pen image"></a>
             </div>
         </div>
     </section>
